--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
     "displayTitle":"Meekdai",
-"homeUrl":"http://duhui87.github.io",
+"homeUrl":"https://80hou.eu.org/",
 "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
 "email":"meekdai@163.com",
 "startSite":"02/16/2015",
