--- a/config.json
+++ b/config.json
@@ -3,11 +3,11 @@
     "subTitle":"个人杂记",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
-    "displayTitle":"Meekdai",
+    "displayTitle":"Ha Lou",
 "homeUrl":"https://80hou.eu.org/",
 "faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
-"email":"meekdai@163.com",
-"startSite":"02/16/2015",
+"email":"",
+"startSite":"10/5/2024",
 "filingNum":"",
 "onePageListNum":15,
 "singlePage":["about"],
